--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -5678,17 +5678,17 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	number={5},
 	pages={754-758}}
 
-@article{Ebrahimi1994,
-	title = "Two measures of sample entropy",
-	journal = "Statistics & Probability Letters",
-	volume = "20",
-	number = "3",
-	pages = "225 - 234",
-	year = "1994",
-	issn = "0167-7152",
-	doi = "https://doi.org/10.1016/0167-7152(94)90046-9",
-	url = "http://www.sciencedirect.com/science/article/pii/0167715294900469",
-	author = "N. Ebrahimi and K. Pflughoeft and E. S. Soofi",
+@article{Ebrahimi94,
+	title = {Two measures of sample entropy},
+	journal = {Statistics \& Probability Letters},
+	volume = {20},
+	number = {3},
+	pages = {225-234},
+	year = {1994},
+	issn = {0167-7152},
+	doi = {https://doi.org/10.1016/0167-7152(94)90046-9},
+	url = {https://www.sciencedirect.com/science/article/pii/0167715294900469},
+	author = {N. Ebrahimi and K. Pflughoeft and E. S. Soofi}
 }
 
 @ARTICLE{Ferreira2020,
@@ -5870,3 +5870,134 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={23},  
 	number={11},  
 	pages={1551-1555},}
+
+@ARTICLE{kasischke1997,  
+title = {The use of imaging radars for ecological applications{ - A} review},
+journal = {Remote Sensing of Environment},
+volume = {59},
+number = {2},
+pages = {141-156},
+year = {1997},
+note = {Spaceborne Imaging Radar Mission},
+issn = {0034-4257},
+doi = {https://doi.org/10.1016/S0034-4257(96)00148-4},
+url = {https://www.sciencedirect.com/science/article/pii/S0034425796001484},
+author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
+}
+
+@Book{Chen20015,
+	author = {Chen, Kun{-}Shan},
+	year = {2015},
+	month = {12},
+	pages = {},
+	title = {Principles of Synthetic Aperture Radar Imaging: A System Simulation Approach},
+	isbn = {ISBN-13: 978-1466593145},
+	journal = {Principles of Synthetic Aperture Radar Imaging: A System Simulation Approach},
+	doi = {10.1201/b19057}
+}
+
+@article{Lee1981,
+	title = {Speckle analysis and smoothing of synthetic aperture radar images},
+	journal = {Computer Graphics and Image Processing},
+	volume = {17},
+	number = {1},
+	pages = {24-32},
+	year = {1981},
+	issn = {0146-664X},
+	doi = {https://doi.org/10.1016/S0146-664X(81)80005-6},
+	url = {https://www.sciencedirect.com/science/article/pii/S0146664X81800056},
+	author = {J. Lee},
+}
+
+@article{Correa95,
+	author = { J. C.   Correa },
+	title = {A new estimator of entropy},
+	journal = {Communications in Statistics - Theory and Methods},
+	volume = {24},
+	number = {10},
+	pages = {2439-2449},
+	year  = {1995},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/03610929508831626},
+	
+	URL = { 
+	https://doi.org/10.1080/03610929508831626
+	
+	},
+	eprint = { 
+	https://doi.org/10.1080/03610929508831626
+	
+	}
+	
+}
+
+@article{Vasicek76,
+	ISSN = {00359246},
+	URL = {http://www.jstor.org/stable/2984828},
+	author = {O. Vasicek},
+	journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+	number = {1},
+	pages = {54--59},
+	publisher = {[Royal Statistical Society, Wiley]},
+	title = {A Test for Normality Based on Sample Entropy},
+	volume = {38},
+	year = {1976}
+}
+
+@article{VanEs92,
+	ISSN = {03036898, 14679469},
+	URL = {http://www.jstor.org/stable/4616225},
+	abstract = {We consider estimation of functionals of a probability density of the elements of a sample. We discuss a class of statistics based on spacings of increasing order and show that these statistics are almost surely consistent. Special attention is paid to entropy estimation. In particular we derive asymptotic normality in that case. It turns out that the entropy estimator is efficient under certain conditions on the unknown density.},
+	author = {B. van Es},
+	journal = {Scandinavian Journal of Statistics},
+	number = {1},
+	pages = {61--72},
+	publisher = {[Board of the Foundation of the Scandinavian Journal of Statistics, Wiley]},
+	title = {Estimating Functionals Related to a Density by a Class of Statistics Based on Spacings},
+	volume = {19},
+	year = {1992}
+}
+
+@article{Noughabi13,
+	author = { H. A. Noughabi  and  R. A. Noughabi },
+	title = {On the entropy estimators},
+	journal = {Journal of Statistical Computation and Simulation},
+	volume = {83},
+	number = {4},
+	pages = {784-792},
+	year  = {2013},
+	publisher = {Taylor \& Francis},
+	doi = {10.1080/00949655.2011.637039},
+	
+	URL = { 
+	https://doi.org/10.1080/00949655.2011.637039
+	
+	},
+	eprint = { 
+	https://doi.org/10.1080/00949655.2011.637039
+	
+	}
+	
+}
+
+@book{CaseBerg01,
+	author = {Casella, G. and Berger, R.},
+	biburl = {https://www.bibsonomy.org/bibtex/21597678f36e23439610affbf46adec1c/jwbowers},
+	citeulike-article-id = {105644},
+	date-added = {2007-09-03 22:45:16 -0500},
+	date-modified = {2007-09-03 22:45:16 -0500},
+	howpublished = {{Textbook Binding}},
+	interhash = {2dd8caad6c0b6fb80e6334986a231a05},
+	intrahash = {1597678f36e23439610affbf46adec1c},
+	isbn = {0534243126},
+	keywords = {methodology probability statistics},
+	month = {June},
+	opturl = {http://www.amazon.fr/exec/obidos/ASIN/0534243126/citeulike04-21},
+	publisher = {{Duxbury Resource Center}},
+	timestamp = {2009-10-28T04:42:57.000+0100},
+	title = {Statistical Inference},
+	year = 2001
+}
+
+
+
