Corregido y con observaciones

--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -5692,7 +5692,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 }
 
 @ARTICLE{Ferreira2020,
-	author={J. Ferrerira and Nascimento, A. D.},
+	author={J. Ferreira and Nascimento, A. D.},
 	journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing}, 
 	title={Shannon Entropy for the $\mathcal {G}_{I}^{0}$ Model: A New Segmentation Approach}, 
 	year={2020},
@@ -5703,7 +5703,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Frery2012,	
 	author={A. C. Frery and R. J. Cintra and A. D. Nascimento},	
 	journal={IEEE Transactions on Geoscience and Remote Sensing}, 	
-	title={Entropy-Based Statistical Analysis of {P}ol{S}AR Data}, 	
+	title={Entropy-Based Statistical Analysis of {P}ol{SAR} Data}, 	
 	year={2013},	
 	volume={51},	
 	number={6},	
@@ -5865,7 +5865,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Nobre2016,  
 	author={R. H. Nobre and F. A. A. Rodrigues and R. C. P. Marques and J. S. Nobre and J. F. S. R. Neto and F. N. S. Medeiros},  
 	journal={IEEE Signal Processing Letters},   
-	title={{SAR} Image Segmentation With Rényi's Entropy},   
+	title={{SAR} Image Segmentation With {R}\'enyi's Entropy},   
 	year={2016},  
 	volume={23},  
 	number={11},  
@@ -5912,7 +5912,7 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 @article{Correa95,
 	author = { J. C.   Correa },
 	title = {A new estimator of entropy},
-	journal = {Communications in Statistics - Theory and Methods},
+	journal = {Communications in Statistics -- Theory and Methods},
 	volume = {24},
 	number = {10},
 	pages = {2439-2449},
