--- a/Source/CorreccionTesis/tesis.tex
+++ b/Source/CorreccionTesis/tesis.tex
@@ -290,7 +290,7 @@
 %\bibliographystyle{agsm}
 
 \cleardoublepage
-\bibliography{../../Bibliography/bib_julia}
+\bibliography{../../Bibliography/bib_julia2}
 
 
 \end{document}
